--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,39 @@
 body {
     margin: 0;
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#board {
+    display: grid;
+    grid-template-columns: repeat(7, 50px);
+    gap: 5px;
+    margin-top: 20px;
+}
+
+.cell {
+    width: 50px;
+    height: 50px;
+    border: 1px solid #444;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.peg {
+    background: blue;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+}
+
+.empty {
+    background: lightgray;
+}
+
+.invalid {
+    background: transparent;
+    border: none;
 }
